feat: better coachSequence (if rate limit allows) (#674)
