# src/server/API/controller/Reihung/v4.ts
@@ -4,6 +4,7 @@ import {
   Get,
   OperationId,
   Query,
+  Res,
   Route,
   Tags,
 } from '@tsoa/runtime';
@@ -16,6 +17,7 @@ import type {
 } from 'types/coachSequence';
 import type { EvaNumber } from 'types/common';
 import type { TrainRunWithBR } from 'types/trainRuns';
+import type { TsoaResponse } from '@tsoa/runtime';
 
 @Route('/reihung/v4')
 export class ReihungControllerV4 extends Controller {
@@ -32,6 +34,7 @@ export class ReihungControllerV4 extends Controller {
   @Tags('Reihung')
   @OperationId('Wagenreihung v4')
   async wagenreihung(
+    @Res() notFoundResponse: TsoaResponse<404, void>,
     trainNumber: number,
     /**
      * Departure at the stop you want the coachSequence for
@@ -41,6 +44,8 @@ export class ReihungControllerV4 extends Controller {
     @Query() evaNumber?: EvaNumber,
     /** needed for OEBB Reihung */
     @Query() initialDeparture?: Date,
+    /** needed for new DB Reihung */
+    @Query() category?: string,
   ): Promise<CoachSequenceInformation | void> {
     try {
       const sequence = await coachSequence(
@@ -48,6 +53,7 @@ export class ReihungControllerV4 extends Controller {
         departure,
         evaNumber,
         initialDeparture,
+        category,
       );
       if (sequence) return sequence;
     } catch {
@@ -64,7 +70,7 @@ export class ReihungControllerV4 extends Controller {
         return plannedSequence;
       }
     }
-    this.setStatus(404);
+    return notFoundResponse(404);
   }
 
   /**
