# src/server/API/routes.ts
@@ -1494,6 +1494,7 @@ const models: TsoaRoute.Models = {
     "CoachSequenceInformation": {
         "dataType": "refObject",
         "properties": {
+            "source": {"dataType":"union","subSchemas":[{"dataType":"enum","enums":["OEBB"]},{"dataType":"enum","enums":["NEW"]},{"dataType":"enum","enums":["DB"]}],"required":true},
             "stop": {"ref":"CoachSequenceStop","required":true},
             "product": {"ref":"CoachSequenceProduct","required":true},
             "sequence": {"ref":"CoachSequence","required":true},
@@ -2335,10 +2336,12 @@ export function RegisterRoutes(router: KoaRouter) {
 
             async function ReihungControllerV4_wagenreihung(context: any, next: any) {
             const args = {
+                    notFoundResponse: {"in":"res","name":"404","required":true,"dataType":"void"},
                     trainNumber: {"in":"path","name":"trainNumber","required":true,"dataType":"integer","validators":{"isInt":{"errorMsg":"trainNumber"}}},
                     departure: {"in":"query","name":"departure","required":true,"dataType":"datetime"},
                     evaNumber: {"in":"query","name":"evaNumber","ref":"EvaNumber"},
                     initialDeparture: {"in":"query","name":"initialDeparture","dataType":"datetime"},
+                    category: {"in":"query","name":"category","dataType":"string"},
             };
 
             let validatedArgs: any[] = [];
